			ROX-Session
			Session manager for the ROX desktop
			by Thomas Leonard

31-Dec-2005
~~~~~~~~~~~
Fixed some problems with the new code (Thomas Leonard; reported by Babyfai
Cheung).

03-Nov-2005
~~~~~~~~~~~
Started rewriting in Python (Thomas Leonard).

23-Oct-2005
~~~~~~~~~~~
Support KDM when doing "Add to login" (Stephen Watson).

04-Oct-2005
~~~~~~~~~~~
Fixed C code for dbus 0.36: part of a previous patch was missing, and a
workaround was needed for dbus bug 4637 (Tony Houghton).

02-Sep-2005
~~~~~~~~~~~
Added options for screen blanking with DPMS (Tony Houghton).

31-Aug-2005
~~~~~~~~~~~
Updated Chinese translations (Babyfai Cheung).

30-Aug-2005
~~~~~~~~~~~
Generate Python messages.pot in the right place (Babyfai Cheung).

29-Aug-2005
~~~~~~~~~~~
Fixed update-po to include Python strings (Thomas Leonard; reported by babyfai
Cheung).
Make NumLock default to off, as on some laptops it makes the letter keys
produce numbers! (reported by Matthew Weier O'Phinney).

28-Aug-2005 (Release 0.26)
~~~~~~~~~~~
Updated build system to match ROX-Filer: generated files go in the 'build'
directory, the platform guessing has been removed, and the translation building
system has been updated. Also upgraded to the latest findrox and added
ROX-Session.xml for 0launch (Thomas Leonard).
RunROX and SetUp panel scripts use freedesktop.org basedir spec.

09-Jul-2005
~~~~~~~~~~~
Work-around for problem with D-BUS 0.3 Python bindings which prevented them
working with Python 2.3 (Thomas Leonard, reported by Marcus).
Separated the Guide from ROX-Session, as it was getting far too big (Thomas
Leonard).

03-Jul-2005
~~~~~~~~~~~
Allow ROX-Session to compile with DBUS 0.3x (Tony Houghton and Thomas Leonard).
Try to run ROX-Session using 0launch, if possible (Thomas Leonard).

20-May-2005
~~~~~~~~~~~
Change the way that ROX-Session runs ROX-Filer. It now uses the -S option to
open the default Panel and Pinboard, with the configuration of panel and 