@@ -1,2 +1,4 @@
 site = 'rox.sourceforge.net'
 session_service = "net.sf.rox.Session"
+control_interface = 'net.sf.rox.Session.Control'
+settings_interface = 'net.sf.rox.Session.Control'
