@@ -2,6 +2,11 @@
 			Session manager for the ROX desktop
 			by Thomas Leonard
 
+16-Jan-2006
+~~~~~~~~~~~
+main.py and settings.py updated for DBus 0,3x, needs checking it still
+works under 0.2x (Stephen Watson).
+
 31-Dec-2005
 ~~~~~~~~~~~
 Fixed some problems with the new code (Thomas Leonard; reported by Babyfai
